--- a/locales/gr/common.json
+++ b/locales/gr/common.json
@@ -38,5 +38,12 @@
     "item2": "Transport in die/aus der Mongolei",
     "item3": "Getränke",
     "item4": "Kosten, oben nicht erwähnt"
+  },
+  "tripDesc": {
+    "date": "Termin",
+    "group": "Groupenanzahl",
+    "price": "Reisepreise",
+    "transport": "Transport",
+    "accom": "Unterkunft"
   }
 }
