--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -53,6 +53,7 @@
     "desc1": "We are looking forward to your contact.",
     "phone": "Mobile",
     "mail": "EMail",
-    "desc2": "We'll get back to you immediately!"
+    "desc2": "We'll get back to you immediately!",
+    "book": "Book your trip here"
   }
 }
